Thu May 18 01:28:02 2000  Christopher Faylor <cgf@cygnus.com>

	* select.cc (thread_pipe): Add paranoid check to ensure thread
	termination.
	* external.cc: Eliminate obsolete include.
	* getopt.c (getopt_long): Fix compiler warning.
	* shared.h: Moved PID_ definitions to include/sys/cygwin so that they
	can be used by external programs.
	* include/sys/cygwin.h: Move external definitions here.  Include
	sys/resource.h to avoid having to do this everywhere.

Thu May 18 01:04:02 2000  Christopher Faylor <cgf@cygnus.com>

	* sigproc.h (sigframe): Don't set frame info unless tid matches this
	thread id.

Wed May 17 23:13:32 2000  Christopher Faylor <cgf@cygnus.com>

	* dcrt0.cc (dll_crt0_1): Initialize mainthread stuff here before
	anything needs it.
	* sigproc.cc (sigproc_init): Move mainthread initialization out of
	here.
	* sigproc.h (sigthread): Add init() method.
	(sigframe): Don't try to initialize muto.
	* sync.cc: Undef WaitForSingleObject to avoid recursion.

2000-05-17  DJ Delorie  <dj@cygnus.com>

	* testsuite/winsup.api/crlf.c: New
	* testsuite/winsup.api/iospeed.c: New

Wed May 17 01:05:52 2000  Christopher Faylor <cgf@cygnus.com>

	* path.cc (mount_info::cygdrive_posix_path): Don't add trailing slash
	if referring to something like c:\.
	* dcrt0.cc (dll_crt0_1): Move uinfo initialization prior to sig_send
	initialization to give signal thread a chance to finish.
	* debug.cc (WFSO): Move to sigproc.cc
	(WFMO): Ditto.
	* exceptions.cc (interruptible): Allocate slightly more space for
	directory just for paranoia's sake.
	(call_handler): Eliminate nonmain argument.  Determine if main thread
	has set a frame pointer and use it if so.
	(sig_handle): Eliminate nonmain argument.
	* net.cc: Record frame information in appropriate routines throughout.
	* select.cc (select): Ditto.
	* sigproc.cc: Use sigthread structure to record mainthread id
	throughout.
	(sig_send): Record frame information for signal handler.
	(wait_sig): Reflect argument change in sig_handle.